Adding the missing functionalities to the API